# AI_Forecast

./: .gitignore  .pre-commit-config.yaml  24_HOUR_RAPID_IMPROVEMENT_PLAN.md  Dsp Project-checkpoint.ipynb  Makefile  README.md  VERIFICATION_REPORT.md  config.py  main.py  pyproject.toml  requirements.txt  run_dashboard.bat  setup.bat  setup.py  tasks.md
.claude/: settings.local.json
dashboard/: app.py  enhanced_app.py  run_dashboard.bat  streamlit_app.py
data/: AI_data_prepared.csv
data/processed/: AI_rise_and_popularity.csv  ai_market_clean.csv  ai_popularity_clean.csv  cleaned_AI_ML_popularity.csv  cleaned_The_Rise_of_AI.csv  cleaning_report.csv
data/raw/: AI_ML_popularity.csv  The_Rise_of_AI.csv
data/raw/2025_OXFORD_AI_REPORT/: Economy_combined.csv  Economy_final.csv  Public_Opinion_combined.csv  Public_opinion_final.csv  Research_and_Development_combined.csv  Research_and_Development_final.csv  Technical_Performance_combined.csv  Technical_Performance_final.csv
docs/: UV_BEST_PRACTICES.md  project_research.md
models/aisoftwarerevenueinbillions/: gradient_boosting.joblib  lasso_regression.joblib  linear_regression.joblib  random_forest.joblib  ridge_regression.joblib  xgboost.joblib
models/globalaimarketvalueinbillions/: gradient_boosting.joblib  lasso_regression.joblib  linear_regression.joblib  random_forest.joblib  ridge_regression.joblib  xgboost.joblib
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_feature_engineering.ipynb  04_eda_visualization.ipynb  05_model_development.ipynb  06_predictions.ipynb  07_final_report.ipynb  XGBoost_AI_Forecast.csv  data_analysis.ipynb  data_cleaning.ipynb
notebooks/predictions/: forecasting.ipynb
notebooks/predictions/Forecast/: LSTM.ipynb  Time_series.ipynb  xgboost.ipynb
results/: ai_market_engineered.csv  ai_market_features_minmax_scaled.csv  ai_market_features_standard_scaled.csv  business_insights.csv  correlation_matrix_pearson.csv  correlation_matrix_spearman.csv  cross_validation_results.csv  data_quality_summary.csv  ensemble_results.csv  feature_list.csv  model_comparison_ai_software_revenue_in_billions.csv  model_comparison_global_ai_market_value_in_billions.csv  regional_ai_popularity.csv  strong_correlations.csv
results/predictions/: revenue_forecasts.csv
src/: Data_preparation.py  analyzer.py  data_collector.py  predictor.py  visualizations.py
src/legacy/: prepare_2025_ai_report_data.py
tests/: conftest.py  test_config.py
